# computer-graphics-ray-tracer

./: CMakeLists.txt  README.md  assignment.html  final-project-workload-distribution-group153.xlsx  final-project-workload-distribution-groupXXX.xlsx
framework/include/framework/: glm_ostream.h  mesh.h
framework/src/: mesh.cpp
prebuilt/: Intersect_x64_debug.lib  Intersect_x64_release.lib  Provided_x64_debug.lib  Provided_x64_release.lib  Provided_x64_relwithdebinfo.lib  libProvided_linux_x64_debug.a_newold  libProvided_linux_x64_debug.a_old  libProvided_linux_x64_release.a_newold  libProvided_linux_x64_release.a_old  libProvided_linux_x64_relwithdebinfo.a_newold  libProvided_linux_x64_relwithdebinfo.a_old
src/: bvh.cpp  bvh.h  common.h  extra.cpp  interpolate.cpp  light.cpp  main.cpp  recursive.cpp  render.cpp  scene.cpp  scene.h  shading.cpp  texture.cpp
tests/: CMakeLists.txt
